--- a/assignments/index.html
+++ b/assignments/index.html
@@ -66,6 +66,11 @@
                     alt="folder icon" style="width: 200px;height: 200px;max-width:100%;"></a>
             <P style="text-align: center;color: honeydew;">Object Assignment</P>
         </div>
+        <div>
+            <a href="./TeamReport/login.html"> <img src="https://freesvg.org/img/blankYellowFolder.png"
+                    alt="folder icon" style="width: 200px;height: 200px;max-width:100%;"></a>
+            <P style="text-align: center;color: honeydew;">Team reporter</P>
+        </div>
     </div>
     </div>
 </body>
