--- a/assignments/TeamReport/login.html
+++ b/assignments/TeamReport/login.html
@@ -23,7 +23,7 @@
                 <button id="signUp" onclick="signup()" >Sign Up</button>
                 <button id="logIn" onclick="signin()">Login</button>
                 <div class="login">
-                    <form action="./index.html">
+                    <form action="./main.html">
                         <p style="text-align: center;">Sign in to your Account</p>
                         <label for="loginEmail">User Name:</label><br>
                         <input type="email" name="email" required id="loginEmail" placeholder="Enter Email Address"><br><br>
