--- a/assignments/TeamReport/login.html
+++ b/assignments/TeamReport/login.html
@@ -16,9 +16,8 @@
                 <img src="./logo.svg" alt="logo" id="logo">
                 <p style="text-align: center; margin: 0%;padding: 0%;">Team Reporter</p>
             </div>
-        <p></p>
         </div>
-        <div class="middle">
+        <div class="middle" style="margin-top: 5rem;">
             <div class="account">
                 <button id="signUp" onclick="signup()" >Sign Up</button>
                 <button id="logIn" onclick="signin()">Login</button>
