--- a/assignments/TeamReport/login.html
+++ b/assignments/TeamReport/login.html
@@ -29,6 +29,7 @@
                         <label for="loginPassword">Password:</label><br>
                         <input type="password" name="password" required id="loginPassword"
                             placeholder="Give Password"><br><br>
+                        <p id="errmsg"></p>
                         <input type="Submit" value="Login" id="loginbut">
                     </form>
                 </div>
