--- a/assignments/TeamReport/login.html
+++ b/assignments/TeamReport/login.html
@@ -55,5 +55,5 @@
         <div class="footer"></div>
     </div>
 </body>
-<script src="./index.js"></script>
+<script src="./loginSignup.js"></script>
 </html>
