--- a/assignments/TeamReport/index.html
+++ b/assignments/TeamReport/index.html
@@ -79,6 +79,16 @@
                         <input type="submit" value="Create Now" id="createNow" onclick="createTeam()">
                     </form>
                 </div>
+                <div class="table">
+                    <table>
+                        <tr>
+                            <th>Team Name</th>
+                            <th>Own By</th>
+                            <th>Members Name</th>
+                        </tr>
+                        <tbody id="tbody"></tbody>
+                    </table>
+                </div>
             </div>
             <div class="memberview"></div>
         </div>
