--- a/assignments/TeamReport/index.html
+++ b/assignments/TeamReport/index.html
@@ -121,6 +121,7 @@
                         <input type="text" id="memberArea"><br>
                         <input type="submit" value="Add Members" class="buttt addMemberss">
                     </form>
+                    <input type="button" value="Save Changes" class="saveChanges" id="saveChanges">
                 </div>
             </div>
             <div class="memberview"></div>
