--- a/assignments/TeamReport/index.html
+++ b/assignments/TeamReport/index.html
@@ -111,6 +111,10 @@
                 <div class="teamOwnerView" id="teamOwnerView">
                     <button id="setings">Settings</button>
                     <button id="reports">Reports</button><br><br>
+                    <div id="teamNameTitle" style="text-align: center;font-weight: 550;">
+                        <input type="text" id="teamTitleArea" placeholder="Enter Team Name" required><br>
+                    </div>
+                    
                     <div id="questions" ></div>
                     <form id="questionForm" onsubmit="return addQuestions()">
                         <input type="text" id="questionArea" required><br>
