--- a/assignments/TeamReport/index.html
+++ b/assignments/TeamReport/index.html
@@ -128,6 +128,9 @@
                     <input type="button" value="Save Changes" class="saveChanges" id="saveChanges" onclick="saveChanges()">
                 </div>
             </div>
+            <fieldset id="partOfTeamsArea" style="border: 1px solid #16914B;">
+                <legend style="text-align: center;">Teams You Are Part Of</legend>
+            </fieldset>
             <div class="memberview"></div>
         </div>
     </div>
