--- a/assignments/TeamReport/index.html
+++ b/assignments/TeamReport/index.html
@@ -98,7 +98,7 @@
                     </form><br>
                     <div id="members"></div>
                     <form id="memberForm" onsubmit="return addMembers()">
-                        <input type="text" id="memberArea"><br>
+                        <input type="email" required id="memberArea" placeholder="Please give correct email address as it will send mail to given email."><br>
                         <input type="submit" value="Add Members" class="buttt addMemberss">
                     </form>
                     <input type="button" value="Save Changes" class="saveChanges" id="saveChanges"
