--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <title>HTML & CSS</title>
 </head>
 <style>
-    .main{
+    .main {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-around;     
+        justify-content: space-around;
     }
-    body{
+
+    body {
         background-color: rgb(41, 39, 39);
     }
 </style>
+
 <body>
     <P style="color: rgb(180, 107, 107);text-align: center;font-size: 3vw,;"> <b>HTML & CSS COURSE</b></P>
-    <div class="main" >
+    <div class="main">
         <div>
             <a href="./Practice/">
                 <img src="https://icon-library.com/images/file-folder-icon-png/file-folder-icon-png-8.jpg"
@@ -31,8 +33,16 @@
             <a href="./assignments/"> <img
                     src="https://icon-library.com/images/file-folder-icon-png/file-folder-icon-png-8.jpg"
                     alt="folder icon" width="200px" height="200px">
-                </a>
+            </a>
             <P style="text-align: center; color: honeydew;">HTML & CSS ASSIGNMENTS</P>
+        </div>
+
+        <div>
+            <a href="https://github.com/ABDULLAH-SALEEM/DV-IMP-1"> <img
+                    src="https://icon-library.com/images/file-folder-icon-png/file-folder-icon-png-8.jpg"
+                    alt="folder icon" width="200px" height="200px">
+            </a>
+            <P style="text-align: center; color: honeydew;">DV IMPLEMETATION TASK ONE</P>
         </div>
     </div>
     <!-- style="position: absolute;transform: translate(-50%, 0%);top: 50%;left: 50%;max-width:100%;" -->
